src/component/canvas/snapshots/envision__component__canvas__tests__render_disabled.snap
---
source: src/component/canvas/tests.rs
assertion_line: 632
expression: terminal.backend().to_string()
---
┌Disabled Canvas───────────────────────┐
│                                      │
│                                      │
│                                      │
│                ⣀⣀⣀⣀⣀⡀                │
│            ⣀⠴⠚⠉     ⠈⠙⠲⢄⡀            │
│           ⡰⠃            ⠳⡀           │
│           ⡇              ⡇           │
│           ⠘⣆           ⢀⡞            │
│             ⠙⠲⠤⣀⣀⣀⣀⣀⡠⠴⠚⠁             │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
