src/component/canvas/snapshots/envision__component__canvas__tests__render_focused.snap
---
source: src/component/canvas/tests.rs
assertion_line: 611
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
