src/component/canvas/snapshots/envision__component__canvas__tests__render_with_label.snap
---
source: src/component/canvas/tests.rs
assertion_line: 692
expression: terminal.backend().to_string()
---
┌Labels────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                  Hello               │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
