src/component/canvas/snapshots/envision__component__canvas__tests__render_with_points.snap
---
source: src/component/canvas/tests.rs
assertion_line: 672
expression: terminal.backend().to_string()
---
┌Points────────────────────────────────┐
│                                      │
│                                 ⠐    │
│                                      │
│                                      │
│                                      │
│                                      │
│                  ⠐                   │
│                                      │
│                                      │
│                                      │
│                                      │
│   ⠐                                  │
│                                      │
└──────────────────────────────────────┘
