src/component/canvas/snapshots/envision__component__canvas__tests__render_with_shapes.snap
---
source: src/component/canvas/tests.rs
assertion_line: 597
expression: terminal.backend().to_string()
---
┌Shapes────────────────────────────────────────────────────┐
│                                                       ⡠⠔⠊│
│                                                   ⢀⡠⠔⠉   │
│                                    ⣀⣀⡤⠤⠤⠤⣄⣀⡀   ⢀⠤⠒⠁      │
│                                ⢀⡤⠚⠉        ⠈⣙⠦⣎⠁         │
│                               ⢠⠏         ⣀⠔⠊  ⠈⢧         │
│                               ⢸      ⢀⡠⠔⠉      ⢸         │
│                               ⠈⠣⡀ ⢀⡠⠒⠁        ⡠⠋         │
│                                ⣀⠬⠛⠧⢤⣀⣀⣀⣀⣀⣀⣠⠤⠖⠋           │
│                             ⣀⠔⠊                          │
│                          ⡠⠔⠉                             │
│     ⢠⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⢤⡤⠒⠉                                │
│     ⢸             ⢀⠤⠊⠁⡇                                  │
│     ⢸          ⣀⠔⠊⠁   ⡇                                  │
│     ⢸       ⡠⠔⠉       ⡇                                  │
│     ⢸   ⢀⡠⠒⠉          ⡇                                  │
│     ⢸⣀⣤⣒⣁⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡇                                  │
│   ⣀⠔⠊⠁                                                   │
│⡠⠔⠊                                                       │
└──────────────────────────────────────────────────────────┘
