src/component/canvas/snapshots/envision__component__canvas__tests__render_with_title.snap
---
source: src/component/canvas/tests.rs
assertion_line: 563
expression: terminal.backend().to_string()
---
┌Test Canvas───────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
